--- a/greeting.html
+++ b/greeting.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>My First React App</title>
+	<title>My First React app</title>
 </head>
-	
+
 <body>
-	<p>Hello world!</p>
-</body>
+
+	<div id="app">
+	</div>
 	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+	<script type="text/babel">
+
+		class App extends React.Component {
+				render() {
+					return (
+						<div>
+							<h1>Welcome to AppWorld</h1>
+							<p>Please enjoy your stay!</p>
+						</div>
+					)
+				}
+		}
+
+		ReactDOM.render(
+			<App />,
+			document.getElementById('app')
+		);
+
+	</script>
+</body>
+
 </html>
